# RBF-aPID-Controller

./: RBF_numpy.py  RBF_tf.py  README.md  aPID.py  aPID_tf.py  first_order_sim.py
CPP_Implementation/: CMakeLists.txt  RBF_aPID.cpp  apid_controller.cpp  apid_controller.h  apid_controller_test.cpp  main.cpp  rbf_model.cpp  rbf_model.h  rbf_model_test.cpp
CPP_Implementation/src/: rbf_model.cpp  rbf_model.h
CPP_Implementation/test/: apid_controller_test.cpp  rbf_model_test.cpp
NP_Implementation/: RBF_numpy.py  aPID_numpy.py
NP_Implementation/test/: test_aPID_np.py
NP_Implementation/tests/: test_RBF_np.py
TF_Implementation/: RBF_tf.py  run_tf_tests.py
TF_Implementation/test/: test_RBF_tf.py  test_aPID_tf.py
